--- a/templates/includes/head-meta.pug
+++ b/templates/includes/head-meta.pug
@@ -7,5 +7,5 @@ meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
 //-  meta(name="HandheldFriendly" content="True")
 //-  meta(name="MobileOptimized" content="320")
 
-meta(name="author" content="#{ author }")
-meta(name="description" content="#{ description }")
+meta(name="author" content= author)
+meta(name="description" content= description)
