Layout main body and sidebar

--- a/templates/includes/scripts-head.pug
+++ b/templates/includes/scripts-head.pug
@@ -1,4 +1,7 @@
 // javascript
 script(src='/assets/js/head.load.min.js')
 script(src='//use.typekit.net/kxx6oxw.js')
-script try { Typekit.load(); } catch(e) {}
+script.
+  try {
+    Typekit.load();
+  } catch(e) {}
