Basic hookup to Contentful

--- a/templates/includes/layout/header.pug
+++ b/templates/includes/layout/header.pug
@@ -1,4 +1,4 @@
 header(role="banner" class="banner" id="l-header")
   a(href="/" class="logo")
-    img(src="/assets/img/lightweightadventures.png" alt= description)
+    img(src="/assets/img/lightweightadventures.png" alt= site.description)
   include ../modules/nav-toggle.pug
