--- a/templates/includes/modules/social.pug
+++ b/templates/includes/modules/social.pug
@@ -2,48 +2,48 @@
   ul
     li.social-facebook
       a(
-        href="https://www.facebook.com/" + facebook
+        href="https://www.facebook.com/" + site.facebook
         class="ss-icon"
-        title="Follow " + title + " on Facebook"
+        title="Follow " + site.title + " on Facebook"
         rel="me"
       ) Facebook
     li.social-twitter
       a(
-        href="http://twitter.com/" + twitter
+        href="http://twitter.com/" + site.twitter
         class="ss-icon"
-        title="Follow " + title + " on Twitter"
+        title="Follow " + site.title + " on Twitter"
         rel="me"
       ) Twitter
     li.social-tumblr
       a(
-        href="https://www.tumblr.com/blog/" + tumblr
+        href="https://www.tumblr.com/blog/" + site.tumblr
         class="ss-icon"
-        title="Follow " + title + " on Tumblr"
+        title="Follow " + site.title + " on Tumblr"
         rel="me") Tumblr
     li.social-instagram
       a(
-        href="https://instagram.com/" + instagram
+        href="https://instagram.com/" + site.instagram
         class="ss-icon"
-        title="Follow " + title + " on Instagram"
+        title="Follow " + site.title + " on Instagram"
         rel="me"
       ) Instagram
     li.social-flickr
       a(
-        href="https://www.flickr.com/photos/" + flickr
+        href="https://www.flickr.com/photos/" + site.flickr
         class="ss-icon"
-        title="Peruse " + title + " Flickr Stream"
+        title="Peruse " + site.title + " Flickr Stream"
         rel="me"
       ) Flickr
     li.social-email
       a(
-        href="mailto:" + email
+        href="mailto:" + site.email
         class="ss-icon"
-        title="Email " + title
+        title="Email " + site.title
         rel="me"
       ) Email
     li.social-rss
       a(
         href="rss"
         class="ss-icon"
-        title= title + " RSS feed"
+        title= site.title + " RSS feed"
       ) RSS
