All scripts working

--- a/templates/includes/modules/post.pug
+++ b/templates/includes/modules/post.pug
@@ -4,8 +4,7 @@ article.post
     h1.post-heading
       a(href='/blog/' + slug + '.html' class='post-permalink')= title
 
-  .post-content
-    p !{content}
+  .post-content !{content}
 
       //- footer.cats-tags
       //-   include cats-tags.pug
