--- a/templates/layout.pug
+++ b/templates/layout.pug
@@ -24,3 +24,4 @@ include includes/site/conditional.pug
 
       include includes/layout/sidebar.pug
       include includes/layout/footer.pug
+    include includes/site/scripts-foot.pug
