--- a/templates/includes/layout/sidebar.pug
+++ b/templates/includes/layout/sidebar.pug
@@ -1,7 +1,7 @@
 aside(class="subscribe l-panel" id="l-sidebar")
   header
     h1 Adventures in your inbox
-    p Follow our adventures in sailing and simplicity aboard <i>Inch</i>.
+    p Follow our adventures in sailing and simplicity aboard <i>Calypso</i>.
 
   p.
     Browse our #[a(href="/archive") archives], read our #[a(href="/") most popular posts], or sign up to our newsletter below.
