Change of tagline and description

--- a/templates/includes/modules/social.pug
+++ b/templates/includes/modules/social.pug
@@ -16,7 +16,7 @@
       ) Twitter
     li.social-tumblr
       a(
-        href="https://www.tumblr.com/blog/" + site.tumblr
+        href="https://www.tumblr.com/" + site.tumblr
         class="ss-icon"
         title="Follow " + site.title + " on Tumblr"
         rel="me") Tumblr
