Link in Tumblr correctly

--- a/templates/includes/modules/social.pug
+++ b/templates/includes/modules/social.pug
@@ -16,7 +16,7 @@
       ) Twitter
     li.social-tumblr
       a(
-        href="https://www.tumblr.com/" + site.tumblr
+        href="https://" + site.tumblr + ".tumblr.com"
         class="ss-icon"
         title="Follow " + site.title + " on Tumblr"
         rel="me") Tumblr
