--- a/templates/includes/modules/nav-toggle.pug
+++ b/templates/includes/modules/nav-toggle.pug
@@ -4,5 +4,5 @@ nav(role="navigation" class="navigation-toggle" id="navigation-toggle")
     li: a(href="/") Home
     li: a(href="/about.html") About
     li: a(href="/contact.html") Contact
-    // - li: a(href="/archive.html") Archive
-         li: a(href="/search.html") Search
+    li: a(href="/archive.html") Archive
+    //- li: a(href="/search.html") Search
